tests/fixtures/invalid/pow_list_float_list.py
# Cannot call pow() with List[int], Float, List[int]
x = pow([1, 2, 3], 1.0, [1, 2, 3])
